@@ -1,3 +1,7 @@
+* Optimize Fuse.String#trim. [jQuery Trac #2279] [Ariel Flesler, DarkRyder, jddalton, phpmyforum, Steven Levithan]
+
+* Make Fuseboxed RegExp constructor automatically fix buggy "\s" character matches in regexp patterns. [jddalton]
+
 * Fix Chrome issue with iframe sandboxes by using the __proto__ mode by default. [jddalton]
 
 * Fixed Konqueror Element#replace bug in _createContextualFragment() that threw errors when passed incompatible markup. [jddalton, kangax]
